appId: com.pokedexjon
---
- launchApp:
    clearState: true

# 1. Validar pantalla inicial y esperar carga de datos
- assertVisible: 'Todos los Pokemon'

# Esperar a que la API responda y la lista renderice el primer Pokémon
- extendedWaitUntil:
    visible:
      id: 'pokemon-card-1'
    timeout: 20000

- assertVisible:
    id: 'pokemon-card-1'

# 2. Navegar a la pantalla de Detalle (Bulbasaur)
- tapOn:
    id: 'pokemon-card-1'

# 3. Validar elementos en DetailScreen
- extendedWaitUntil:
    visible: 'Características Físicas'
    timeout: 15000

- assertVisible: '#001'
- assertVisible: 'Tipo'
- assertVisible: 'Características Físicas'
- assertVisible: 'Habilidades'
- assertVisible: 'Estadísticas Base'

# 4. Probar interacción del carrusel de imágenes (si tiene múltiples sprites)
- runFlow:
    when:
      visible:
        id: 'slider-next-button'
    commands:
      - tapOn:
          id: 'slider-next-button'
      - assertVisible:
          id: 'slider-prev-button'
      - tapOn:
          id: 'slider-prev-button'

# 5. Volver a la pantalla Home
- back

# 6. Validar que regresamos a la lista principal
- assertVisible: 'Todos los Pokemon'
- assertVisible:
    id: 'pokemon-card-1'

# 7. Probar Pull-To-Refresh en la parte superior de la lista
- swipe:
    start: 50%, 30%
    end: 50%, 80%
    duration: 1000

- assertVisible: 'Todos los Pokemon'

# 8. Probar scroll hacia abajo en la lista (LegendList / Paginación)
- scroll
- scroll

# Validar que seguimos en la pantalla principal (título fijo en la barra superior)
- assertVisible: 'Pokedex'
